Covered up to the technical analysis of the phase 3 of our docs candlestick visualization example plan

--- a/docs/examples/candlestick/pattern_visualization.ipynb
+++ b/docs/examples/candlestick/pattern_visualization.ipynb
@@ -2040,7 +2040,7 @@
    "metadata": {},
    "source": [
     "# Phase 3: Advanced Visualization Features\n",
-    "## 7. Multi-Timeframe Analysis"
+    "## 1. Multi-Timeframe Analysis"
    ]
   },
   {
@@ -2219,6 +2219,432 @@
     "except Exception as e:\n",
     "    print(f\"Error creating multi-timeframe examples: {str(e)}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Pattern Overlays and Annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pattern overlays and annotations\n",
+    "def create_pattern_overlay_examples(data, config):\n",
+    "    \"\"\"Create examples of pattern overlays and annotations\"\"\"\n",
+    "    # Initialize pattern detector\n",
+    "    patterns = CandlestickPatterns()\n",
+    "    \n",
+    "    # Detect common patterns\n",
+    "    doji = patterns.detect_doji(data)\n",
+    "    engulfing_bullish, engulfing_bearish = patterns.detect_engulfing(data)\n",
+    "    hammer = patterns.detect_hammer(data)\n",
+    "    evening_star = patterns.detect_evening_star(data)\n",
+    "    \n",
+    "    # Initialize visualizer\n",
+    "    visualizer = CandlestickVisualizer(data, config)\n",
+    "    \n",
+    "    # Create base chart\n",
+    "    pattern_fig = visualizer.create_candlestick_chart(\n",
+    "        use_plotly=True,\n",
+    "        show_volume=True,\n",
+    "        title=\"Candlestick Chart with Pattern Detection\"\n",
+    "    )\n",
+    "    \n",
+    "    # Add pattern overlays\n",
+    "    pattern_list = [\n",
+    "        ('Doji', doji, 'circle', config.color_scheme['neutral']),\n",
+    "        ('Bullish Engulfing', engulfing_bullish, 'triangle-up', config.color_scheme['bullish']),\n",
+    "        ('Bearish Engulfing', engulfing_bearish, 'triangle-down', config.color_scheme['bearish']),\n",
+    "        ('Hammer', hammer, 'diamond', config.color_scheme['bullish']),\n",
+    "        ('Evening Star', evening_star, 'star', config.color_scheme['bearish'])\n",
+    "    ]\n",
+    "    \n",
+    "    for pattern_name, pattern_signal, marker_symbol, marker_color in pattern_list:\n",
+    "        if isinstance(pattern_signal, pd.Series) and pattern_signal.any():\n",
+    "            # For patterns returning a single series\n",
+    "            pattern_fig.add_trace(\n",
+    "                go.Scatter(\n",
+    "                    x=data.index[pattern_signal],\n",
+    "                    y=data['Low'][pattern_signal] * 0.99,\n",
+    "                    mode='markers',\n",
+    "                    marker=dict(\n",
+    "                        symbol=marker_symbol,\n",
+    "                        size=10,\n",
+    "                        color=marker_color\n",
+    "                    ),\n",
+    "                    name=pattern_name,\n",
+    "                    opacity=config.pattern_opacity\n",
+    "                )\n",
+    "            )\n",
+    "    \n",
+    "    # Add annotations for significant patterns\n",
+    "    base_settings = BaseVisualizationSettings(config)\n",
+    "    \n",
+    "    # Find a few patterns to annotate\n",
+    "    annotation_examples = []\n",
+    "    \n",
+    "    # Look for doji\n",
+    "    if doji.any():\n",
+    "        doji_idx = data.index[doji][0]\n",
+    "        annotation_examples.append(\n",
+    "            base_settings.create_annotation(\n",
+    "                text=\"Doji Pattern\",\n",
+    "                x=doji_idx,\n",
+    "                y=data.loc[doji_idx, 'Low'] * 0.98,\n",
+    "                is_pattern=True\n",
+    "            )\n",
+    "        )\n",
+    "    \n",
+    "    # Look for bullish engulfing\n",
+    "    if engulfing_bullish.any():\n",
+    "        bullish_idx = data.index[engulfing_bullish][0]\n",
+    "        annotation_examples.append(\n",
+    "            base_settings.create_annotation(\n",
+    "                text=\"Bullish Engulfing\",\n",
+    "                x=bullish_idx,\n",
+    "                y=data.loc[bullish_idx, 'Low'] * 0.98,\n",
+    "                is_pattern=True\n",
+    "            )\n",
+    "        )\n",
+    "    \n",
+    "    # Add annotations to chart\n",
+    "    for annotation in annotation_examples:\n",
+    "        pattern_fig.add_annotation(annotation)\n",
+    "    \n",
+    "    # Create pattern highlight zones\n",
+    "    highlight_fig = go.Figure(pattern_fig)\n",
+    "    \n",
+    "    # Add highlight rectangles for important patterns\n",
+    "    if engulfing_bullish.any():\n",
+    "        # Find first occurrence\n",
+    "        first_bullish = data.index[engulfing_bullish][0]\n",
+    "        idx = data.index.get_loc(first_bullish)\n",
+    "        start_idx = max(0, idx - 2)\n",
+    "        end_idx = min(len(data), idx + 3)\n",
+    "        \n",
+    "        highlight_zone = {\n",
+    "            'type': 'rect',\n",
+    "            'x0': data.index[start_idx],\n",
+    "            'x1': data.index[end_idx],\n",
+    "            'y0': data.loc[data.index[start_idx:end_idx], 'Low'].min() * 0.98,\n",
+    "            'y1': data.loc[data.index[start_idx:end_idx], 'High'].max() * 1.02,\n",
+    "            'fillcolor': config.color_scheme['bullish'],\n",
+    "            'opacity': 0.2,\n",
+    "            'line_width': 0\n",
+    "        }\n",
+    "        \n",
+    "        highlight_fig.add_shape(highlight_zone)\n",
+    "        \n",
+    "        # Add explanation annotation\n",
+    "        highlight_fig.add_annotation(\n",
+    "            x=data.index[end_idx],\n",
+    "            y=data.loc[data.index[end_idx], 'High'] * 1.03,\n",
+    "            text=\"Bullish Engulfing Pattern Zone\",\n",
+    "            showarrow=True,\n",
+    "            arrowhead=2,\n",
+    "            bgcolor=\"white\",\n",
+    "            opacity=0.8\n",
+    "        )\n",
+    "    \n",
+    "    return {\n",
+    "        'pattern_fig': pattern_fig,\n",
+    "        'highlight_fig': highlight_fig,\n",
+    "        'pattern_results': {\n",
+    "            'doji': doji,\n",
+    "            'engulfing_bullish': engulfing_bullish,\n",
+    "            'engulfing_bearish': engulfing_bearish,\n",
+    "            'hammer': hammer,\n",
+    "            'evening_star': evening_star\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "# Create pattern overlay examples\n",
+    "try:\n",
+    "    pattern_examples = create_pattern_overlay_examples(\n",
+    "        apple_data, \n",
+    "        viz_env['custom_config']\n",
+    "    )\n",
+    "    \n",
+    "    # Display charts\n",
+    "    pattern_examples['pattern_fig'].show()\n",
+    "    pattern_examples['highlight_fig'].show()\n",
+    "    \n",
+    "    print(\"Pattern overlay examples created successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating pattern overlay examples: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Technical Indicators Integration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Technical indicators integration\n",
+    "def create_technical_indicators_examples(data, config):\n",
+    "    \"\"\"Create examples of technical indicators integration\"\"\"\n",
+    "    # Initialize visualizer\n",
+    "    visualizer = CandlestickVisualizer(data, config)\n",
+    "    \n",
+    "    # Create base chart\n",
+    "    indicator_fig = visualizer.create_candlestick_chart(\n",
+    "        use_plotly=True,\n",
+    "        show_volume=False,\n",
+    "        title=\"Candlestick Chart with Technical Indicators\"\n",
+    "    )\n",
+    "    \n",
+    "    # Calculate common technical indicators\n",
+    "    \n",
+    "    # Moving Averages\n",
+    "    sma20 = data['Close'].rolling(window=20).mean()\n",
+    "    sma50 = data['Close'].rolling(window=50).mean()\n",
+    "    ema20 = data['Close'].ewm(span=20, adjust=False).mean()\n",
+    "    \n",
+    "    # Bollinger Bands\n",
+    "    bb_middle = data['Close'].rolling(window=20).mean()\n",
+    "    bb_std = data['Close'].rolling(window=20).std()\n",
+    "    bb_upper = bb_middle + 2 * bb_std\n",
+    "    bb_lower = bb_middle - 2 * bb_std\n",
+    "    \n",
+    "    # RSI\n",
+    "    delta = data['Close'].diff()\n",
+    "    gain = delta.clip(lower=0)\n",
+    "    loss = -delta.clip(upper=0)\n",
+    "    avg_gain = gain.rolling(window=14).mean()\n",
+    "    avg_loss = loss.rolling(window=14).mean()\n",
+    "    rs = avg_gain / avg_loss\n",
+    "    rsi = 100 - (100 / (1 + rs))\n",
+    "    \n",
+    "    # MACD\n",
+    "    ema12 = data['Close'].ewm(span=12, adjust=False).mean()\n",
+    "    ema26 = data['Close'].ewm(span=26, adjust=False).mean()\n",
+    "    macd = ema12 - ema26\n",
+    "    signal = macd.ewm(span=9, adjust=False).mean()\n",
+    "    macd_hist = macd - signal\n",
+    "    \n",
+    "    # Add indicators to main chart\n",
+    "    indicator_fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=sma20,\n",
+    "            name=\"SMA(20)\",\n",
+    "            line=dict(color='blue', width=1)\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    indicator_fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=sma50,\n",
+    "            name=\"SMA(50)\",\n",
+    "            line=dict(color='red', width=1)\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    indicator_fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=ema20,\n",
+    "            name=\"EMA(20)\",\n",
+    "            line=dict(color='purple', width=1, dash='dash')\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    # Create a separate chart with Bollinger Bands\n",
+    "    bb_fig = go.Figure(\n",
+    "        go.Candlestick(\n",
+    "            x=data.index,\n",
+    "            open=data['Open'],\n",
+    "            high=data['High'],\n",
+    "            low=data['Low'],\n",
+    "            close=data['Close'],\n",
+    "            name='Price'\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    bb_fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=bb_middle,\n",
+    "            name=\"BB Middle\",\n",
+    "            line=dict(color='blue', width=1)\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    bb_fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=bb_upper,\n",
+    "            name=\"BB Upper\",\n",
+    "            line=dict(color='green', width=1, dash='dash')\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    bb_fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=bb_lower,\n",
+    "            name=\"BB Lower\",\n",
+    "            line=dict(color='green', width=1, dash='dash'),\n",
+    "            fill='tonexty',\n",
+    "            fillcolor='rgba(0,128,0,0.1)'\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    bb_fig.update_layout(\n",
+    "        title=\"Bollinger Bands Analysis\",\n",
+    "        height=500,\n",
+    "        width=1000\n",
+    "    )\n",
+    "    \n",
+    "    # Create a subplot with RSI and MACD\n",
+    "    oscillator_fig = make_subplots(\n",
+    "        rows=3, cols=1,\n",
+    "        subplot_titles=(\"Price\", \"RSI\", \"MACD\"),\n",
+    "        shared_xaxes=True,\n",
+    "        vertical_spacing=0.05,\n",
+    "        row_heights=[0.5, 0.25, 0.25]\n",
+    "    )\n",
+    "    \n",
+    "    # Add price chart\n",
+    "    oscillator_fig.add_trace(\n",
+    "        go.Candlestick(\n",
+    "            x=data.index,\n",
+    "            open=data['Open'],\n",
+    "            high=data['High'],\n",
+    "            low=data['Low'],\n",
+    "            close=data['Close'],\n",
+    "            name='Price'\n",
+    "        ),\n",
+    "        row=1, col=1\n",
+    "    )\n",
+    "    \n",
+    "    # Add RSI\n",
+    "    oscillator_fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=rsi,\n",
+    "            name=\"RSI(14)\",\n",
+    "            line=dict(color='purple', width=1)\n",
+    "        ),\n",
+    "        row=2, col=1\n",
+    "    )\n",
+    "    \n",
+    "    # Add RSI reference lines\n",
+    "    oscillator_fig.add_shape(\n",
+    "        type=\"line\",\n",
+    "        x0=data.index[0],\n",
+    "        y0=70,\n",
+    "        x1=data.index[-1],\n",
+    "        y1=70,\n",
+    "        line=dict(color=\"red\", width=1, dash=\"dash\"),\n",
+    "        row=2, col=1\n",
+    "    )\n",
+    "    \n",
+    "    oscillator_fig.add_shape(\n",
+    "        type=\"line\",\n",
+    "        x0=data.index[0],\n",
+    "        y0=30,\n",
+    "        x1=data.index[-1],\n",
+    "        y1=30,\n",
+    "        line=dict(color=\"green\", width=1, dash=\"dash\"),\n",
+    "        row=2, col=1\n",
+    "    )\n",
+    "    \n",
+    "    # Add MACD\n",
+    "    oscillator_fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=macd,\n",
+    "            name=\"MACD\",\n",
+    "            line=dict(color='blue', width=1)\n",
+    "        ),\n",
+    "        row=3, col=1\n",
+    "    )\n",
+    "    \n",
+    "    oscillator_fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=signal,\n",
+    "            name=\"Signal\",\n",
+    "            line=dict(color='red', width=1)\n",
+    "        ),\n",
+    "        row=3, col=1\n",
+    "    )\n",
+    "    \n",
+    "    # Add MACD histogram\n",
+    "    oscillator_fig.add_trace(\n",
+    "        go.Bar(\n",
+    "            x=data.index,\n",
+    "            y=macd_hist,\n",
+    "            name=\"MACD Histogram\",\n",
+    "            marker_color=np.where(macd_hist >= 0, 'green', 'red')\n",
+    "        ),\n",
+    "        row=3, col=1\n",
+    "    )\n",
+    "    \n",
+    "    oscillator_fig.update_layout(\n",
+    "        title=\"RSI and MACD Analysis\",\n",
+    "        height=800,\n",
+    "        width=1000\n",
+    "    )\n",
+    "    \n",
+    "    # Add reference lines to RSI\n",
+    "    oscillator_fig.update_yaxes(title_text=\"RSI\", range=[0, 100], row=2, col=1)\n",
+    "    \n",
+    "    return {\n",
+    "        'indicator_fig': indicator_fig,\n",
+    "        'bb_fig': bb_fig,\n",
+    "        'oscillator_fig': oscillator_fig,\n",
+    "        'indicators': {\n",
+    "            'sma20': sma20,\n",
+    "            'sma50': sma50,\n",
+    "            'ema20': ema20,\n",
+    "            'bollinger_bands': {\n",
+    "                'middle': bb_middle,\n",
+    "                'upper': bb_upper,\n",
+    "                'lower': bb_lower\n",
+    "            },\n",
+    "            'rsi': rsi,\n",
+    "            'macd': macd,\n",
+    "            'signal': signal,\n",
+    "            'macd_hist': macd_hist\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "# Create technical indicators examples\n",
+    "try:\n",
+    "    indicator_examples = create_technical_indicators_examples(\n",
+    "        apple_data, \n",
+    "        viz_env['default_config']\n",
+    "    )\n",
+    "    \n",
+    "    # Display charts\n",
+    "    indicator_examples['indicator_fig'].show()\n",
+    "    indicator_examples['bb_fig'].show()\n",
+    "    indicator_examples['oscillator_fig'].show()\n",
+    "    \n",
+    "    print(\"Technical indicators examples created successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating technical indicators examples: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
