--- a/docs/examples/candlestick/pattern_visualization.ipynb
+++ b/docs/examples/candlestick/pattern_visualization.ipynb
@@ -9611,6 +9611,424 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Phase 5: Advanced Visualization System Implementation\n",
+    "## 1. Custom Visualization Theme Manager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Custom Visualization Theme Manager\n",
+    "def create_custom_theme_system(data, config):\n",
+    "    \"\"\"Create a custom theme management system for visualizations\"\"\"\n",
+    "    \n",
+    "    # Define several custom themes\n",
+    "    themes = {\n",
+    "        'dark_theme': {\n",
+    "            'color_scheme': {\n",
+    "                'bullish': '#00FF00',  # Bright green\n",
+    "                'bearish': '#FF0000',  # Bright red\n",
+    "                'neutral': '#BBBBBB',  # Gray\n",
+    "                'complex': '#AA00FF',  # Purple\n",
+    "                'volume_up': '#00FF00',\n",
+    "                'volume_down': '#FF0000',\n",
+    "                'background': '#212121',  # Dark gray\n",
+    "                'text': '#FFFFFF'  # White\n",
+    "            },\n",
+    "            'grid_settings': {\n",
+    "                'color': '#333333',\n",
+    "                'opacity': 0.3,\n",
+    "                'width': 1,\n",
+    "                'style': 'dashed'\n",
+    "            },\n",
+    "            'fonts': {\n",
+    "                'family': 'Arial, sans-serif',\n",
+    "                'sizes': {\n",
+    "                    'title': 18,\n",
+    "                    'subtitle': 16,\n",
+    "                    'axis': 14,\n",
+    "                    'label': 12,\n",
+    "                    'annotation': 10\n",
+    "                }\n",
+    "            }\n",
+    "        },\n",
+    "        'light_theme': {\n",
+    "            'color_scheme': {\n",
+    "                'bullish': '#2ecc71',  # Softer green\n",
+    "                'bearish': '#e74c3c',  # Softer red\n",
+    "                'neutral': '#3498db',  # Blue\n",
+    "                'complex': '#9b59b6',  # Purple\n",
+    "                'volume_up': '#2ecc71',\n",
+    "                'volume_down': '#e74c3c',\n",
+    "                'background': '#ffffff',  # White\n",
+    "                'text': '#333333'  # Dark gray\n",
+    "            },\n",
+    "            'grid_settings': {\n",
+    "                'color': '#eeeeee',\n",
+    "                'opacity': 0.7,\n",
+    "                'width': 1,\n",
+    "                'style': 'solid'\n",
+    "            },\n",
+    "            'fonts': {\n",
+    "                'family': 'Helvetica, sans-serif',\n",
+    "                'sizes': {\n",
+    "                    'title': 16,\n",
+    "                    'subtitle': 14,\n",
+    "                    'axis': 12,\n",
+    "                    'label': 10,\n",
+    "                    'annotation': 10\n",
+    "                }\n",
+    "            }\n",
+    "        },\n",
+    "        'classic_trading': {\n",
+    "            'color_scheme': {\n",
+    "                'bullish': '#006400',  # Dark green\n",
+    "                'bearish': '#8B0000',  # Dark red\n",
+    "                'neutral': '#000080',  # Navy blue\n",
+    "                'complex': '#4B0082',  # Indigo\n",
+    "                'volume_up': '#006400',\n",
+    "                'volume_down': '#8B0000',\n",
+    "                'background': '#F5F5F5',  # Off-white\n",
+    "                'text': '#000000'  # Black\n",
+    "            },\n",
+    "            'grid_settings': {\n",
+    "                'color': '#CCCCCC',\n",
+    "                'opacity': 0.5,\n",
+    "                'width': 1,\n",
+    "                'style': 'dotted'\n",
+    "            },\n",
+    "            'fonts': {\n",
+    "                'family': 'Georgia, serif',\n",
+    "                'sizes': {\n",
+    "                    'title': 16,\n",
+    "                    'subtitle': 14,\n",
+    "                    'axis': 12,\n",
+    "                    'label': 10,\n",
+    "                    'annotation': 10\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    # Initialize visualizer with default config\n",
+    "    visualizer = CandlestickVisualizer(data, config)\n",
+    "    \n",
+    "    # Function to apply theme to visualizer\n",
+    "    def apply_theme(theme_name):\n",
+    "        if theme_name not in themes:\n",
+    "            print(f\"Theme '{theme_name}' not found. Using default.\")\n",
+    "            return visualizer\n",
+    "            \n",
+    "        # Create a new config with theme settings\n",
+    "        theme_config = VisualizationConfig()\n",
+    "        \n",
+    "        # Update color scheme\n",
+    "        theme_config.color_scheme = themes[theme_name]['color_scheme']\n",
+    "        \n",
+    "        # Update grid settings\n",
+    "        theme_config.grid_settings = themes[theme_name]['grid_settings']\n",
+    "        \n",
+    "        # Update fonts\n",
+    "        theme_config.fonts = themes[theme_name]['fonts']\n",
+    "        \n",
+    "        # Create new visualizer with themed config\n",
+    "        themed_visualizer = CandlestickVisualizer(data, theme_config)\n",
+    "        return themed_visualizer\n",
+    "    \n",
+    "    # Create example charts with different themes\n",
+    "    theme_examples = {}\n",
+    "    \n",
+    "    for theme_name in themes.keys():\n",
+    "        print(f\"Creating example chart with {theme_name}...\")\n",
+    "        themed_visualizer = apply_theme(theme_name)\n",
+    "        \n",
+    "        chart = themed_visualizer.create_candlestick_chart(\n",
+    "            use_plotly=True,\n",
+    "            show_volume=True,\n",
+    "            title=f\"Candlestick Chart with {theme_name.replace('_', ' ').title()} Theme\"\n",
+    "        )\n",
+    "        \n",
+    "        theme_examples[theme_name] = chart\n",
+    "    \n",
+    "    return {\n",
+    "        'themes': themes,\n",
+    "        'apply_theme': apply_theme,\n",
+    "        'theme_examples': theme_examples\n",
+    "    }\n",
+    "\n",
+    "# Create custom theme examples\n",
+    "try:\n",
+    "    theme_system = create_custom_theme_system(\n",
+    "        apple_data,\n",
+    "        viz_env['default_config']\n",
+    "    )\n",
+    "    \n",
+    "    # Display charts with different themes\n",
+    "    for theme_name, chart in theme_system['theme_examples'].items():\n",
+    "        chart.show()\n",
+    "    \n",
+    "    print(\"Custom theme system created successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating custom theme system: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Comparative Visualization Tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Comparative Visualization Tools\n",
+    "def create_comparative_visualization(data_dict, config):\n",
+    "    \"\"\"Create tools for comparing multiple securities or indicators\"\"\"\n",
+    "    \n",
+    "    # Function to create normalized price chart\n",
+    "    def create_normalized_chart(data_dict, start_date=None, title=\"Normalized Price Comparison\"):\n",
+    "        \"\"\"Create a chart with normalized prices for comparison\"\"\"\n",
+    "        fig = go.Figure()\n",
+    "        \n",
+    "        for name, data in data_dict.items():\n",
+    "            # If start_date is specified, filter data\n",
+    "            if start_date:\n",
+    "                data = data.loc[data.index >= start_date].copy()\n",
+    "            \n",
+    "            # Normalize prices to start at 100\n",
+    "            first_close = data['Close'].iloc[0]\n",
+    "            normalized = data['Close'] / first_close * 100\n",
+    "            \n",
+    "            # Add trace\n",
+    "            fig.add_trace(\n",
+    "                go.Scatter(\n",
+    "                    x=data.index,\n",
+    "                    y=normalized,\n",
+    "                    mode='lines',\n",
+    "                    name=f\"{name}\",\n",
+    "                    line=dict(width=2)\n",
+    "                )\n",
+    "            )\n",
+    "        \n",
+    "        # Update layout\n",
+    "        fig.update_layout(\n",
+    "            title=title,\n",
+    "            xaxis_title=\"Date\",\n",
+    "            yaxis_title=\"Normalized Price (Base=100)\",\n",
+    "            height=600,\n",
+    "            width=1000,\n",
+    "            legend=dict(\n",
+    "                yanchor=\"top\",\n",
+    "                y=0.99,\n",
+    "                xanchor=\"left\",\n",
+    "                x=0.01\n",
+    "            ),\n",
+    "            hovermode=\"x unified\"\n",
+    "        )\n",
+    "        \n",
+    "        return fig\n",
+    "    \n",
+    "    # Function to create correlation matrix\n",
+    "    def create_correlation_matrix(data_dict, period='1m'):\n",
+    "        \"\"\"Create a correlation matrix heatmap\"\"\"\n",
+    "        # Extract close prices\n",
+    "        close_prices = pd.DataFrame()\n",
+    "        \n",
+    "        for name, data in data_dict.items():\n",
+    "            close_prices[name] = data['Close']\n",
+    "        \n",
+    "        # Calculate correlation\n",
+    "        correlation = close_prices.corr()\n",
+    "        \n",
+    "        # Create heatmap\n",
+    "        fig = go.Figure(data=go.Heatmap(\n",
+    "            z=correlation.values,\n",
+    "            x=correlation.columns,\n",
+    "            y=correlation.index,\n",
+    "            colorscale='RdBu',\n",
+    "            zmid=0,\n",
+    "            text=np.around(correlation.values, decimals=2),\n",
+    "            texttemplate='%{text:.2f}',\n",
+    "            showscale=True\n",
+    "        ))\n",
+    "        \n",
+    "        fig.update_layout(\n",
+    "            title=f\"Price Correlation Matrix - {period}\",\n",
+    "            height=600,\n",
+    "            width=800\n",
+    "        )\n",
+    "        \n",
+    "        return fig\n",
+    "    \n",
+    "    # Function to create return comparison\n",
+    "    def create_return_comparison(data_dict, period='1m'):\n",
+    "        \"\"\"Create a return comparison chart\"\"\"\n",
+    "        # Calculate returns\n",
+    "        returns_dict = {}\n",
+    "        \n",
+    "        for name, data in data_dict.items():\n",
+    "            if period == '1m':\n",
+    "                returns_dict[name] = data['Close'].pct_change(20).iloc[-1] * 100\n",
+    "            elif period == '3m':\n",
+    "                returns_dict[name] = data['Close'].pct_change(60).iloc[-1] * 100\n",
+    "            elif period == '6m':\n",
+    "                returns_dict[name] = data['Close'].pct_change(120).iloc[-1] * 100\n",
+    "            elif period == '1y':\n",
+    "                returns_dict[name] = data['Close'].pct_change(252).iloc[-1] * 100\n",
+    "            else:\n",
+    "                returns_dict[name] = data['Close'].pct_change().iloc[-1] * 100\n",
+    "        \n",
+    "        # Create bar chart\n",
+    "        names = list(returns_dict.keys())\n",
+    "        returns = list(returns_dict.values())\n",
+    "        colors = ['green' if r > 0 else 'red' for r in returns]\n",
+    "        \n",
+    "        fig = go.Figure(data=go.Bar(\n",
+    "            x=names,\n",
+    "            y=returns,\n",
+    "            marker_color=colors,\n",
+    "            text=[f\"{r:.2f}%\" for r in returns],\n",
+    "            textposition='auto'\n",
+    "        ))\n",
+    "        \n",
+    "        fig.update_layout(\n",
+    "            title=f\"{period} Return Comparison\",\n",
+    "            xaxis_title=\"Security\",\n",
+    "            yaxis_title=\"Return (%)\",\n",
+    "            height=500,\n",
+    "            width=800\n",
+    "        )\n",
+    "        \n",
+    "        return fig\n",
+    "    \n",
+    "    # Function to create volatility comparison\n",
+    "    def create_volatility_comparison(data_dict):\n",
+    "        \"\"\"Create a volatility comparison chart\"\"\"\n",
+    "        volatility_dict = {}\n",
+    "        \n",
+    "        for name, data in data_dict.items():\n",
+    "            # Calculate daily returns\n",
+    "            returns = data['Close'].pct_change().dropna()\n",
+    "            \n",
+    "            # Calculate annualized volatility\n",
+    "            volatility_dict[name] = returns.std() * np.sqrt(252) * 100\n",
+    "        \n",
+    "        # Create bar chart\n",
+    "        names = list(volatility_dict.keys())\n",
+    "        volatilities = list(volatility_dict.values())\n",
+    "        \n",
+    "        fig = go.Figure(data=go.Bar(\n",
+    "            x=names,\n",
+    "            y=volatilities,\n",
+    "            marker_color='purple',\n",
+    "            text=[f\"{v:.2f}%\" for v in volatilities],\n",
+    "            textposition='auto'\n",
+    "        ))\n",
+    "        \n",
+    "        fig.update_layout(\n",
+    "            title=\"Annualized Volatility Comparison\",\n",
+    "            xaxis_title=\"Security\",\n",
+    "            yaxis_title=\"Annualized Volatility (%)\",\n",
+    "            height=500,\n",
+    "            width=800\n",
+    "        )\n",
+    "        \n",
+    "        return fig\n",
+    "    \n",
+    "    # Create different comparative visualizations\n",
+    "    normalized_chart = create_normalized_chart(data_dict)\n",
+    "    correlation_matrix = create_correlation_matrix(data_dict)\n",
+    "    return_comparison = create_return_comparison(data_dict)\n",
+    "    volatility_comparison = create_volatility_comparison(data_dict)\n",
+    "    \n",
+    "    # Create dashboard with all comparisons\n",
+    "    dashboard = make_subplots(\n",
+    "        rows=2, cols=2,\n",
+    "        subplot_titles=(\n",
+    "            \"Normalized Price Comparison\",\n",
+    "            \"Correlation Matrix\",\n",
+    "            \"Return Comparison\",\n",
+    "            \"Volatility Comparison\"\n",
+    "        ),\n",
+    "        specs=[\n",
+    "            [{\"type\": \"scatter\"}, {\"type\": \"heatmap\"}],\n",
+    "            [{\"type\": \"bar\"}, {\"type\": \"bar\"}]\n",
+    "        ],\n",
+    "        vertical_spacing=0.1,\n",
+    "        horizontal_spacing=0.1\n",
+    "    )\n",
+    "    \n",
+    "    # Add traces from individual charts\n",
+    "    # Normalized price chart\n",
+    "    for trace in normalized_chart.data:\n",
+    "        dashboard.add_trace(trace, row=1, col=1)\n",
+    "    \n",
+    "    # Correlation matrix\n",
+    "    dashboard.add_trace(correlation_matrix.data[0], row=1, col=2)\n",
+    "    \n",
+    "    # Return comparison\n",
+    "    dashboard.add_trace(return_comparison.data[0], row=2, col=1)\n",
+    "    \n",
+    "    # Volatility comparison\n",
+    "    dashboard.add_trace(volatility_comparison.data[0], row=2, col=2)\n",
+    "    \n",
+    "    # Update layout\n",
+    "    dashboard.update_layout(\n",
+    "        title=\"Multi-Asset Comparison Dashboard\",\n",
+    "        height=1000,\n",
+    "        width=1200,\n",
+    "        showlegend=True,\n",
+    "        legend=dict(\n",
+    "            orientation=\"h\",\n",
+    "            yanchor=\"bottom\",\n",
+    "            y=1.02,\n",
+    "            xanchor=\"right\",\n",
+    "            x=1\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    return {\n",
+    "        'normalized_chart': normalized_chart,\n",
+    "        'correlation_matrix': correlation_matrix,\n",
+    "        'return_comparison': return_comparison,\n",
+    "        'volatility_comparison': volatility_comparison,\n",
+    "        'dashboard': dashboard\n",
+    "    }\n",
+    "\n",
+    "# Create comparative visualization examples\n",
+    "try:\n",
+    "    # Create a dictionary with multiple datasets\n",
+    "    comparison_data = {\n",
+    "        'AAPL': apple_data,\n",
+    "        'MSFT': msft_data,\n",
+    "        'Trending': trending_data,\n",
+    "        'Ranging': ranging_data\n",
+    "    }\n",
+    "    \n",
+    "    comparative_examples = create_comparative_visualization(\n",
+    "        comparison_data,\n",
+    "        viz_env['default_config']\n",
+    "    )\n",
+    "    \n",
+    "    # Display charts\n",
+    "    comparative_examples['dashboard'].show()\n",
+    "    \n",
+    "    print(\"Comparative visualization examples created successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating comparative visualization examples: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
